--- a/src/main/webapp/pages/same/index.xhtml
+++ b/src/main/webapp/pages/same/index.xhtml
@@ -30,7 +30,7 @@
                 </h:panelGroup>
                 <h:panelGroup id="content" layout="block">
                     <h:panelGroup id="arquivo" layout="block" rendered="#{sameCtrl.route eq 0}">
-                        <ui:include src="arquivo.xhtml"/>
+                        <!--<ui:include src="arquivo.xhtml"/>-->
                     </h:panelGroup>
                     <h:panelGroup id="pendente" layout="block" rendered="#{sameCtrl.route eq 1}">
                         <ui:include src="pendente.xhtml"/>
