--- a/src/main/webapp/pages/setor/list.xhtml
+++ b/src/main/webapp/pages/setor/list.xhtml
@@ -17,8 +17,8 @@
                     style="text-align: left;">
             <h:outputText value="#{item.title}"/>
           </p:column>
-          <p:column headerText="Nível" width="50" style="text-align: left;">
-            <h:outputText value="#{item.nivel}"/>
+          <p:column headerText="Nível" width="150" style="text-align: left;">
+            <h:outputText value="#{item.nivel.label}"/>
           </p:column>
         </vah:dataTable>
       </p:panel>
